test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx-service
  labels:
    app: test-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: test-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx-deployment
  labels:
    app: test-nginx
spec:
  selector:
    matchLabels:
      app: test-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
